--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 <body class="body">
   <div class="global-styles w-embed">
     <style>
-      /* Make text look cscvcrisper and more legible in all browsers */
+      /* Make text look crisper and more legible in all browsers */
       body {
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
